fix(web): #698 fix code messages text overflow
fixed in #fd2c1ec

--- a/actor-sdk/sdk-web/src/styles/messages.scss
+++ b/actor-sdk/sdk-web/src/styles/messages.scss
@@ -641,7 +641,6 @@ $sticker-max-size: 180px;
     samp {
       margin: 0 0 7px;
       overflow: auto;
-      white-space: pre-wrap;
     }
 
     .emoji-outer {
